--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,36 +2,88 @@ pipeline {
   agent any
   stages {
     stage('Test Run On Dev') {
-     parallel {
+    stage('Build Dev') {
+      parallel {
         stage('Test Run On Dev') {
-        steps {
+        stage('Build Dev') {
+          steps {
             sh 'mvn clean install -Denv="dev"'
-            
+            sh 'mvn clean install -DskipTests=true'
           }
         }
+
         stage('Test QA') {
-        steps {
-        sh 'mvn clean install -Denv="qa"'
+        stage('chrome') {
+          steps {
+            sh 'mvn clean install -Denv="qa"'
+            sh 'mvn test -Denv=qa -Dbrowser=chrome'
+          }
         }
-       }
+
+        stage('Test Stage') {
+      }
+    }
+
+    stage('Build QA') {
+      parallel {
+        stage('Build QA') {
+          steps {
+            sh 'mvn clean install -DskipTests=true'
+          }
+        }
+
+        stage('chrome') {
+          steps {
+            sh 'mvn clean install -Denv="stage"'
+            sh 'mvn test -Denv=qa -Dbrowser=chrome'
+          }
+        }
+
         stage('Test PROD') {
-        steps {
-        sh 'mvn clean install'
+        stage('firefox') {
+          steps {
+            sh 'mvn clean install'
+            sh 'mvn test -Denv=qa -Dbrowser=firefox'
+          }
         }
-       }
+
       }
-     }
-        
-        stage(''){
-        steps{
+    }
+
+    stage('') {
+      steps {
         sh 'echo "test execution is done"'
+    stage('Build Stage') {
+      parallel {
+        stage('Build Stage') {
+          steps {
+            sh 'mvn clean install -DskipTests=true'
+          }
         }
-       }
+
+        stage('firefox') {
+          steps {
+            sh 'mvn test -Denv=qa -Dbrowser=firefox'
+          }
+        }
+
+        stage('chrome') {
+          steps {
+            sh 'mvn test -Denv=qa -Dbrowser=chrome'
+          }
+        }
+
+        stage('safari') {
+          steps {
+            sh 'mvn test -Denv=qa -Dbrowser=safari'
+          }
+        }
+
       }
-     }
-     
-     
-     stage('Publish reports') {
+    }
+
+
+    stage('Publish reports') {
            steps {
                 script {
                     allure([
@@ -44,34 +96,11 @@ pipeline {
                 }
             }
         }
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
 
-       
+
+
+  }
+  tools {
+    maven 'M3'
+  }
+} 
