--- a/jenkinsfile
+++ b/jenkinsfile
@@ -40,10 +40,10 @@ pipeline {
         }
 
         stage('Test PROD') {
-        stage('firefox') {
+        stage('chrome') {
           steps {
             sh 'mvn clean install'
-            sh 'mvn test -Denv=qa -Dbrowser=firefox'
+            sh 'mvn test -Denv=qa -Dbrowser=chrome'
           }
         }
 
@@ -61,9 +61,9 @@ pipeline {
           }
         }
 
-        stage('firefox') {
+        stage('chrome') {
           steps {
-            sh 'mvn test -Denv=qa -Dbrowser=firefox'
+            sh 'mvn test -Denv=qa -Dbrowser=chrome'
           }
         }
 
@@ -73,9 +73,9 @@ pipeline {
           }
         }
 
-        stage('safari') {
+        stage('chrome') {
           steps {
-            sh 'mvn test -Denv=qa -Dbrowser=safari'
+            sh 'mvn test -Denv=qa -Dbrowser=chrome'
           }
         }
 
