updated Jenkins file

--- a/src/main/java/com/qa/hubspot/config/config.properties
+++ b/src/main/java/com/qa/hubspot/config/config.properties
@@ -1,8 +1,5 @@
 browser=chrome
-headless=true
-incognito=true
 url=https://app.hubspot.com/login
-username=qatestpuja@gmail.com
-password=Dal#1234
-accountname=qatestpuja@gmail.com
-
+username=pooja19pan@gmail.com
+password=Qatest@123
+accountname=pooja19pan@gmail.com
